prevent line break in LineNumbers

--- a/src/transliteration/ui/Transliteration.sass
+++ b/src/transliteration/ui/Transliteration.sass
@@ -28,6 +28,8 @@
 .Transliteration
   &__lines tr
     vertical-align: top
+    & > td:first-of-type sup
+      white-space: nowrap
 
   &__notes
     list-style: none
@@ -175,7 +177,7 @@
 
   &__inAlignSet
     background-color: lightgrey
-  
+
   &__TranslationLine--extent
     white-space: nowrap
 
